--- a/composer.json
+++ b/composer.json
@@ -1,10 +1,5 @@
 {
   "name": "invertus/dpdBalticsApi",
-  "config": {
-    "platform": {
-      "php": "5.6"
-    }
-  },
   "autoload": {
     "psr-4": {
       "Invertus\\dpdBalticsApi\\": "src/"
@@ -18,10 +13,13 @@
   ],
   "require": {
     "php": ">=5.6",
-    "vlucas/phpdotenv": "^3.6"
+    "vlucas/phpdotenv": "^3.6",
+    "symfony/serializer": "^4.4",
+    "symfony/property-access": "^4.4",
+    "symfony/property-info": "^4.4"
   },
   "require-dev": {
-    "phpunit/phpunit": "*",
+    "phpunit/phpunit": "^7.3",
     "facebook/webdriver": "dev-master",
     "squizlabs/php_codesniffer": "*"
   }
