--- a/composer.json
+++ b/composer.json
@@ -17,12 +17,12 @@
     }
   ],
   "require": {
-    "php": ">=5.6",
-    "vlucas/phpdotenv": "^3.6"
+    "php": ">=5.6"
   },
   "require-dev": {
     "phpunit/phpunit": "*",
     "facebook/webdriver": "dev-master",
+    "vlucas/phpdotenv": "^3.6",
     "squizlabs/php_codesniffer": "*"
   }
 }
