--- a/composer.json
+++ b/composer.json
@@ -18,6 +18,7 @@
   ],
   "require": {
     "php": ">=5.6",
+    "vlucas/phpdotenv": "^3.6",
     "symfony/serializer": "*",
     "symfony/property-access": "*",
     "symfony/property-info": "*",
